...
   */
  object Tag {

    /** Shared constants for tagging UI components in the CreateAlertScreen and EditAlertScreen. */
    object AlertInputs {
      const val INSTRUCTION_TEXT = "instructionText"
      const val PRODUCT_FIELD = "productField"
      const val URGENCY_FIELD = "urgencyField"
      const val DROPDOWN_ITEM = "dropdownItem"
      const val LOCATION_FIELD = "locationField"
      const val MESSAGE_FIELD = "messageField"
      const val CURRENT_LOCATION = "currentLocation"
    }

    /** Constants for tagging UI components specific to the CreateAlertScreen * */
    object CreateAlertScreen {
      const val SCREEN = "createAlertScreen"
      const val SUBMIT_BUTTON = "submitButton"
    }

    /** Constants for tagging UI components specific to the EditAlertScreen */
    object EditAlertScreen {
      const val SCREEN = "editAlertScreen"
...
      const val NO_ALERTS_ICON = "noAlertsIcon"
      const val NO_ALERTS_TEXT = "noAlertsText"

      const val ACCEPTED_ALERTS_TEXT = "acceptedAlertsText"
      const val ACCEPTED_ALERTS_DIVIDER = "acceptedAlertsDivider"

      const val FILTER_FAB = "filterFab"
      const val FILTER_FAB_BUBBLE = "filterFabBubble"
      const val FILTER_DIALOG = "filterDialog"
      const val FILTER_DIALOG_TEXT = "filterAlertsText"
      const val FILTER_RADIUS_TEXT = "filterRadiusText"
      const val FILTER_RADIUS_SLIDER = "filterRadiusSlider"
      const val FILTER_APPLY_BUTTON = "filterApplyButton"
      const val FILTER_RESET_BUTTON = "filterResetButton"

      object MyAlertItem {
        const val MY_ALERT = "myAlert"
        const val MY_EDIT_BUTTON = "myAlertEditButton"
      }

...
      const val PASSWORD_VISIBILITY_BUTTON = "passwordVisibilityButton"
    }

    /** Constants for tagging UI components in the MapScreen. */
    object MapScreen {
      const val SCREEN = "mapScreen"
      const val MAP_VIEW_CONTAINER = "mapViewContainer"
      const val MY_LOCATION_BUTTON = "mapButton"
      const val BOTTOM_SHEET = "mapBottomSheet"
      const val PROFILE_PICTURE = "profilePicture"
      const val PROFILE_NAME = "profileName"
      const val ALERT_LOCATION_TEXT = "locationText"
      const val ALERT_TIME_TEXT = "alertTimeText"
      const val ALERT_PRODUCT_ICON = "alertProductIcon"
      const val ALERT_URGENCY_ICON = "alertUrgencyIcon"
...
      const val CONNECTIVITY_BANNER = "connectivityBanner"
      const val CONNECTIVITY_BANNER_TEXT = "connectivityBannerText"
    }

    /** Constants for tagging UI components in the TopAppBar. */
    object TopAppBar {
      const val TOP_BAR = "topBar"
      const val GO_BACK_BUTTON = "goBackButton"
      const val SETTINGS_BUTTON = "settingsButton"
      const val CHAT_BUTTON = "chatButton"
      const val EDIT_BUTTON = "editButton"
      const val TITLE_TEXT = "titleText"
    }

    /** Constants for tagging UI components in the profile screens. */
    object ProfileScreens {
      /** Constants for tagging UI components in the CreateProfileScreen. */
      object CreateProfileScreen {
...
