...
    <string name="alert_lists_pal_alert_accept_text">Accept</string>
    <string name="alert_lists_pal_alert_unaccept_text">Un-accept</string>

    <string name="alert_lists_filter_default">No Preference</string>

    <!-- Map Screen -->
    <string name="map_screen_title">Map</string>
    <string name="map_your_location_marker_title">Your location</string>

    <!-- Tile URLs -->
    <string name="light_tiles_url">https://tiles.stadiamaps.com/tiles/alidade_smooth/</string>
    <string name="dark_tiles_url">https://tiles.stadiamaps.com/tiles/alidade_smooth_dark/</string>

...
